CSS align fix

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4 { font-weight: 700; }
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 header {
